tests/mm0_mmu/fail/bad-sort3241.mm0
-- bad modifier order
provable strict free pure sort s3241;